Remove usages of Collectors.toList()